<resources>
    <string name="app_name">E-Learning</string>
    <string name="title_activity_list_course">ListCourseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_in">sign in</string>
    <string name="log_in">log in</string>
    <string name="your_username">Your username</string>
    <string name="welcome_to_e_learning">Welcome to E-Learning</string>
    <string name="your_password">Your password</string>
    <string name="title_activity_course_detail">CourseDetail</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="welcome_to_register_for_e_learning">Welcome to register for E-Learning</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_telephone">Your Telephone</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_forget_pass">ForgetPassActivity</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="third_party_login">Third party login</string>
    <string name="e_learning">E-Learning</string>
    <string name="easy_to_learn_via_electronic">Easy to learn via Electronic</string>
    <string name="skip"><![CDATA[Skip >]]></string>
    <string name="start_the_journey_in_the_e_learning">Start the journey in the E-Learning</string>
    <string name="start_the_new_journey">Start the new journey</string>
    <string name="teachers">Teachers</string>
    <string name="introduction">Introduction</string>
    <string name="invite_your_friends_to_join_us">Invite your friends to join us !</string>
    <string name="your_email">Your Email</string>

</resources>
