<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android_e_learning.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99404348"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/set_a_new_password"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99000000"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:hint="@string/your_username"
                android:textColor="#9F9FA0"
                android:textColorHint="#9F9FA0" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:background="#83738F" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:hint="New password"
                android:inputType="textPassword"
                android:textColor="#9F9FA0"
                android:textColorHint="#9F9FA0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:background="#83738F" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="#9F9FA0"
                android:textColorHint="#9F9FA0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="5dp"
                android:background="#83738F" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@null"
                android:hint="@string/your_telephone"
                android:textColor="#9F9FA0"
                android:textColorHint="#9F9FA0" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:text="@string/confirm"
                tools:ignore="ButtonStyle,InefficientWeight"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
